# ballerina-rust

./: .gitignore  Cargo.toml  LanguageSupport.md  README.md
ballerina-src/m1/: exp1.bal
ballerina-src/m1/projects/proj1/: Ballerina.toml  main.bal  types.bal
crates/bal-ast/: Cargo.toml
crates/bal-ast/src/: lib.rs  semantic.rs  types.rs  validation.rs
crates/bal-cli/: Cargo.toml
crates/bal-cli/src/: commands.rs  config.rs  dependency.rs  main.rs
crates/bal-cli/src/commands/tests/: mod.rs
crates/bal-codegen/: Cargo.toml
crates/bal-codegen/src/: generator.rs  lib.rs  printer.rs  sourcemap.rs
crates/bal-lsp/: Cargo.toml
crates/bal-lsp/src/: lib.rs
crates/bal-parser/: Cargo.toml
crates/bal-parser/src/: event.rs  grammar.rs  lib.rs  parser_test.rs  sink.rs
crates/bal-parser/src/snapshots/: bal_parser__parser_test__tests__complete_module.snap  bal_parser__parser_test__tests__empty_file.snap  bal_parser__parser_test__tests__error_recovery_missing_param_type.snap  bal_parser__parser_test__tests__error_recovery_missing_semicolon.snap  bal_parser__parser_test__tests__function_with_multiple_params.snap  bal_parser__parser_test__tests__public_function.snap  bal_parser__parser_test__tests__simple_function.snap  bal_parser__parser_test__tests__simple_import.snap
crates/bal-syntax/: Cargo.toml
crates/bal-syntax/src/: error.rs  lexer.rs  lexer_test.rs  lib.rs  project.rs  token.rs
crates/bal-wasm/: Cargo.toml
crates/bal-wasm/src/: bindings.rs  lib.rs
