[workspace]
members = [
    "crates/bal-syntax",
    "crates/bal-parser",
    "crates/bal-ast",
    "crates/bal-codegen",
    "crates/bal-lsp",
    "crates/bal-cli",
    "crates/bal-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hasitha aravinda <mail.hasitha27@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies with fixed versions
rowan = "0.15"
logos = "0.13"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
wasm-bindgen = "0.2" 