[package]
name = "bal-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
bal-parser = { path = "../bal-parser" }
bal-syntax = { path = "../bal-syntax" }
bal-ast = { path = "../bal-ast" }
bal-codegen = { path = "../bal-codegen" }
 