[package]
name = "bal-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
bal-parser = { path = "../bal-parser" }
bal-syntax = { path = "../bal-syntax" }
bal-ast = { path = "../bal-ast" }
bal-codegen = { path = "../bal-codegen" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rowan = "0.15.11"